<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/playlist_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/video_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/video_count"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/view_all"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>